<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".k1Questions.k1_7">

    <Button
        android:id="@+id/btnK1_7A"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/question_button"
        android:text="@string/listopad"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnK1_7C"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnK1_7D"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/question_button"
        android:text="@string/lipiec"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvK1_7Question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/Month"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvK1_7Answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/czerwiec"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvK1_7Question" />

    <Button
        android:id="@+id/btnK1_7C"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/question_button"
        android:text="@string/sierpien"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnK1_7B"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/question_button"
        android:text="@string/maj"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnK1_7D"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvK1_7Correct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/correct"
        android:textColor="@color/colorCorrect"
        android:textSize="72sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvK1_7Wrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/wrong"
        android:textColor="@color/colorWrong"
        android:textSize="72sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/secondK1_7Layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/ivK1_7Tablica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/tablica" />

        <Button
            android:id="@+id/btnK1_7Confirm"
            android:layout_width="92dp"
            android:layout_height="90dp"
            android:layout_marginStart="275dp"
            android:layout_marginTop="210dp"
            android:text="Button"
            app:layout_constraintStart_toStartOf="@+id/ivK1_7Tablica"
            app:layout_constraintTop_toTopOf="@+id/ivK1_7Tablica" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:fontFamily="@font/finger_paint"
            android:text="@string/lipiec"
            android:textColor="@color/colorWhite"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivK1_7Tablica"
            app:layout_constraintEnd_toEndOf="@+id/ivK1_7Tablica"
            app:layout_constraintStart_toStartOf="@+id/ivK1_7Tablica"
            app:layout_constraintTop_toTopOf="@+id/ivK1_7Tablica" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>