<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".k1Questions.k1_19">


    <Button
        android:id="@+id/btnK1_19A"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/question_button"
        android:text="@string/sobota"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnK1_19C"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnK1_19D"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/question_button"
        android:text="@string/wtorek"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvK1_19Question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/Day"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvK1_19Answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/niedziela"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvK1_19Question" />

    <Button
        android:id="@+id/btnK1_19C"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/question_button"
        android:text="@string/poniedzialek"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnK1_19B"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/question_button"
        android:text="@string/czwartek"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnK1_19D"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvK1_19Correct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/correct"
        android:textColor="@color/colorCorrect"
        android:textSize="72sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvK1_19Wrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/wrong"
        android:textColor="@color/colorWrong"
        android:textSize="72sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/secondK1_19Layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/ivK1_19Tablica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/tablica" />

        <Button
            android:id="@+id/btnK1_19Confirm"
            android:layout_width="92dp"
            android:layout_height="90dp"
            android:layout_marginStart="275dp"
            android:layout_marginTop="210dp"
            android:text="Button"
            app:layout_constraintStart_toStartOf="@+id/ivK1_19Tablica"
            app:layout_constraintTop_toTopOf="@+id/ivK1_19Tablica" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:fontFamily="@font/finger_paint"
            android:text="@string/poniedzialek"
            android:textColor="@color/colorWhite"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivK1_19Tablica"
            app:layout_constraintEnd_toEndOf="@+id/ivK1_19Tablica"
            app:layout_constraintStart_toStartOf="@+id/ivK1_19Tablica"
            app:layout_constraintTop_toTopOf="@+id/ivK1_19Tablica" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>