<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".k1Questions.k1_6">


    <Button
        android:id="@+id/btnK1_6A"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/question_button"
        android:text="@string/time5"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnK1_6C"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnK1_6D"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/question_button"
        android:text="@string/time6"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnK1_6C"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/question_button"
        android:text="@string/time7"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnK1_6B"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/question_button"
        android:text="@string/time2"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnK1_6D"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvK1_6Question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/Clock"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvK1_6Correct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/correct"
        android:textColor="@color/colorCorrect"
        android:textSize="72sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvK1_6Wrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/wrong"
        android:textColor="@color/colorWrong"
        android:textSize="72sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivK1_6Question"
        android:layout_width="275dp"
        android:layout_height="150dp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvK1_6Question"
        app:srcCompat="@drawable/zegar400" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/secondK1_6Layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/ivK1_6Tablica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/tablica" />

        <Button
            android:id="@+id/btnK1_6Confirm"
            android:layout_width="92dp"
            android:layout_height="90dp"
            android:layout_marginStart="275dp"
            android:layout_marginTop="210dp"
            android:text="Button"
            app:layout_constraintStart_toStartOf="@+id/ivK1_6Tablica"
            app:layout_constraintTop_toTopOf="@+id/ivK1_6Tablica" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:elevation="2dp"
            android:fontFamily="@font/finger_paint"
            android:text="@string/time7"
            android:textColor="@android:color/white"
            android:textSize="42sp"
            app:layout_constraintEnd_toEndOf="@+id/ivK1_6Tablica"
            app:layout_constraintStart_toStartOf="@+id/ivK1_6Tablica"
            app:layout_constraintTop_toTopOf="@+id/ivK1_6Tablica" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="198dp"
            android:layout_height="150dp"
            android:elevation="2dp"
            app:layout_constraintEnd_toEndOf="@+id/ivK1_6Tablica"
            app:layout_constraintStart_toStartOf="@+id/ivK1_6Tablica"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:srcCompat="@drawable/zegar400b" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>